tests/NormalTests/paczka1/fuzzy1/87488950.err
Error in line 5: u3QSDQjb A394 43,3
Error in line 13: ESIr6 S699 54,9
Error in line 19: ESIr6 A292 82,2
Error in line 26: A451 A394 19,7
Error in line 21: ESIr6 S699 61,1
Error in line 31: S3Eioz A451 13,3
Error in line 29: u3QSDQjb A451 32,6
Error in line 30: ESIr6 A451 78,3
